refactor(service): ♻️ 重构 K8s 主机发现时的状态合并逻辑
- 从按集群维度改为全局查库，确保同一 IP 在所有集群内的受管状态唯一
- 新增 ManagementStatus 枚举引用，支持按受管状态去重并保留优先级
- 优化日志输出，记录来源集群信息便于后续排查
- 统一使用 Java 21 简写 `.toList()` 语法

分支: feature/ui-enhancement

Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>